src/objects/n2de__Distributor_schedule_log__c.object
<CustomObject>
    <description>Scheduler log</description>
    <fields>
        <fullName>n2de__Apex_job_id__c</fullName>
        <label>Apex job id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_end_date__c</fullName>
        <label>Distribution end date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_start_date__c</fullName>
        <label>Distribution start date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Error_message__c</fullName>
        <label>Error message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>n2de__Has_distributions_in_error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has distributions in error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Log_type__c</fullName>
        <label>Log type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Next_apex_job_id__c</fullName>
        <label>Next apex job id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Processing_time__c</fullName>
        <description>Time taken for the distribution run in seconds.</description>
        <label>Processing time (sec)</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Records_assigned__c</fullName>
        <label>Records assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Run_record_limit__c</fullName>
        <description>The Distributor record limit used for this run.</description>
        <label>Run record limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Shutdown_distributors__c</fullName>
        <label>Shutdown distributors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Distributor schedule log</label>
    <nameField>
        <label>Distributor schedule name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributor schedule logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>